# grenmet

./: .dockerignore  .editorconfig  .gitattributes  .gitignore  .npmrc  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  README.md  VENDORED.md  biome.jsonc  deployment.md  figma.config.json  index.html  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  turbo.json
apps/api/fastapi/: .dockerignore  .env.example  .env.local.example  .gitignore  CLAUDE.md  Dockerfile  Dockerfile.prod  README.md  TESTING.md  alembic.ini  docker-compose.override.yml  docker-compose.yml  openapi.gen.json  openapi.json  pyproject.toml
apps/api/fastapi/alembic/: env.py
apps/api/fastapi/alembic/versions/: 2025-10-18_remove_full_name_column_from_user_table.py  2026-03-05_add_hr_profile_tables.py  2026-03-05_baseline_schema.py  2026-03-05_phase1_auth_hr_contract.py  2026-03-05_phase2_workflow_engine.py  2026-03-05_phase3_roster_domain.py  2026-03-05_phase4_timesheet_domain.py  2026-03-05_phase5_ops_forms.py  2026-03-05_phase6_seed_defaults.py  2026-03-06_baseline_schema.py  2026-03-06_phase7_auth_first_permissions.py  2026-06-27_hr_max_fidelity_gaps.py  2026-06-27_hr_parking_permit.py  2026-06-28_cap_alert_identifier_unique_index.py  2026-06-28_user_totp_2fa.py  2026-07-01_modern_user_profile.py  2026-07-03_shift_catalog_ends_next_day_and_seed.py  2026-07-04_cap_job_next_retry_at.py  2026-07-05_workflow_named_coapprovers.py  2026_03_06_hr_user_profile_remove_name_columns.py  2026_03_11_auth_session_foundation.py  2026_06_02_cap_domain.py  5344d599004d_add_username_and_other_user_fields.py
apps/api/fastapi/email-templates/: README.md
apps/api/fastapi/scripts/: README.md  SEED_DATA_GUIDE.md  backend_pre_start.py  backup-database.sh  clear_seed_data.py  dev.sh  format.sh  generate-secrets.sh  import_july_2026_roster.py  import_roster.py  initial_data.py  lint.sh  prestart.sh  quick_test.py  seed_data.py  seed_hr_leave_demo.py
apps/api/fastapi/scripts/data/: roster_2026-07.csv
apps/api/fastapi/src/: config.py  database.py  dependencies.py  email.py  email_config.py  exceptions.py  logging_config.py  main.py  models.py  pagination.py  rate_limit.py
apps/api/fastapi/src/auth/: config.py  constants.py  dependencies.py  exceptions.py  lockout.py  models.py  permissions.py  policy.py  schemas.py  service.py  totp.py  utils.py
apps/api/fastapi/src/cap/: __init__.py  cache.py  config.py  exceptions.py  geo.py  images.py  models.py  pdf.py  router.py  schemas.py  service.py  sign.py  tasks.py  validation.py  xml.py
apps/api/fastapi/src/hr/: __init__.py  authz.py  config.py  constants.py  dependencies.py  exceptions.py  models.py  schemas.py  service.py
apps/api/fastapi/src/items/: constants.py  dependencies.py  exceptions.py  models.py  router.py  schemas.py  service.py  utils.py
apps/api/fastapi/src/storage/: config.py  service.py
apps/api/fastapi/src/utils/: datetime.py  router.py
apps/api/fastapi/src/webhooks/: router.py
apps/api/fastapi/src/worker/: config.py  dispatch.py  main.py  publishers.py
apps/api/fastapi/tests/: conftest.py  factories.py  test_schema_datetime_guard.py  test_settings.py
apps/api/fastapi/tests/auth/: test_2fa.py  test_config.py  test_lockout.py  test_models.py  test_permission_registry.py  test_schemas.py  test_service.py  test_service_extended.py  test_token_ttl.py  test_user_management.py  test_utils.py
apps/api/fastapi/tests/cap/: __init__.py  conftest.py  test_cache.py  test_cap_api.py  test_cap_pagination.py  test_cap_public_scope.py  test_cap_state_machine.py  test_feeds.py  test_geometry_validation.py  test_images.py  test_import.py  test_pdf.py  test_sign.py  test_validation_xml_geo.py  test_xml_parser.py
apps/api/fastapi/tests/hr/: test_absentee_service.py  test_authz.py  test_dailystatus_service.py  test_department_admin.py  test_department_listing.py  test_dependencies.py  test_exchange_service.py  test_leave_ledger.py  test_leave_service.py  test_pagination.py  test_parking_service.py  (+8 more)
geonetcast/: .gitignore  README.md  pyproject.toml
geonetcast/Animation/: my_animation.html
geonetcast/Animation/HTML/: my_animation.html
geonetcast/GNC-A Hardware and Software/FAZZT/GENERAL PROCEDURES/: delete_files.bat
geonetcast/GOES/: script_05.py  script_06.py  script_08.py
geonetcast/Google Colab Notebooks/: INPE_Caribbean_GOES_16_May_2023.ipynb  INPE_Caribbean_General_GNC_A_Products_May_2023.ipynb  INPE_Caribbean_NWP_May_2023.ipynb  INPE_Caribbean_Ocean_May_2023.ipynb
geonetcast/Miscellaneous/: script_01.py  script_03.py  script_07.py  script_09.py
geonetcast/NWP/: script_01.py  script_02.py  script_05.py  script_06.py  script_07.py  script_10.py  script_11.py  script_13.py  script_14.py  script_17.py  script_18.py  script_25.py  script_26.py  script_27.py
notebooks/: .gitignore  README.md  cartopy.ipynb  cartopy2.ipynb  data.grib2  ecmwf-opendata.ipynb  ecmwf-opendata.yaml  pyproject.toml
notebooks/geonetcast/: .gitignore
notebooks/geonetcast/Animation/HTML/: .gitignore
notebooks/geonetcast/Animation/Scripts/: script_animation.py
notebooks/geonetcast/GOES/: script_01.py  script_02.py  script_03.py  script_04.py  script_07.py
notebooks/geonetcast/Miscellaneous/: alpw_lats.txt  alpw_lons.txt  script_02.py  script_04.py  script_05.py  script_06.py  script_08.py  script_10.py
notebooks/geonetcast/Miscellaneous/Samples/: Links_to_Download_Samples.txt
notebooks/geonetcast/NWP/: script_03.py  script_04.py  script_08.py  script_09.py  script_12.py  script_15.py  script_16.py  script_19.py  script_20.py  script_21.py  script_22.py  script_23.py  script_24.py
notebooks/models/: CANONICAL_PARAMS.md
notebooks/models/ecmwf_aifs/: analysis.ipynb  download.ipynb
notebooks/models/ecmwf_aifs_ens/: analysis.ipynb  download.ipynb
notebooks/models/ecmwf_ens/: analysis.ipynb  download.ipynb
notebooks/models/ecmwf_ifs/: analysis.ipynb  download.ipynb
notebooks/models/ensemble/: compare.ipynb
notebooks/models/noaa_gefs/: analysis.ipynb  download.ipynb
notebooks/models/noaa_gfs/: analysis.ipynb  download.ipynb
(+2240 files in other folders)
