[project]
name = "notebooks"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cartopy>=0.25.0",
    "cfgrib>=0.9.15.1",
    "eccodes>=2.45.0",
    "ecmwf-opendata>=0.3.26",
    "ipykernel>=7.2.0",
    "jupyterlab>=4.5.4",
    "matplotlib>=3.10.8",
    "metpy>=1.7.1",
    "notebook>=7.5.3",
    "xarray>=2026.2.0",
]
