[project]
name = "notebooks"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cartopy>=0.25.0",
    "cdsapi>=0.7.7",
    "cfgrib>=0.9.15.1",
    "dask>=2026.3.0",
    "eccodes>=2.45.0",
    "ecmwf-opendata>=0.3.26",
    "herbie-data>=2026.3.0",
    "hvplot>=0.12.2",
    "ipykernel>=7.2.0",
    "ipywidgets>=8.1.8",
    "jupyterlab>=4.5.4",
    "lightgbm>=4.6.0",
    "matplotlib>=3.10.8",
    "meteostat>=2.1.4",
    "metpy>=1.7.1",
    "notebook>=7.5.3",
    "pandas>=3.0.1",
    "pdbufr>=0.14.2",
    "plotly>=6.7.0",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.0",
    "seaborn>=0.13.2",
    "siphon>=0.10.0",
    "statsmodels>=0.14.6",
    "windrose>=1.10.0",
    "xarray>=2026.2.0",
    "xgboost>=3.2.0",
]
