[project]
name = "fast-back"
version = "0.1.0"
description = ""
requires-python = ">=3.10,<4.0"
dependencies = [
    "fastapi[standard]<1.0.0,>=0.114.2",
    "pydantic>=2.7,<3.0.0",
    "pydantic-settings>=2.4,<3.0.0",
    "resend>=2.0.0,<3.0.0",
    "jinja2>=3.1.4,<4.0.0",
    "alembic>=1.13.0,<2.0.0",
    "httpx>=0.27,<1.0.0",
    "psycopg[binary]>=3.1.13,<4.0.0",
    "asyncpg>=0.29.0,<1.0.0",
    "sqlmodel>=0.0.21,<1.0.0",
    "bcrypt>=4.2.0,<5.0.0",
    "sentry-sdk[fastapi]>=2.0.0,<3.0.0",
    "pyjwt>=2.9,<3.0.0",
    "scalar-fastapi>=1.4.4",
    "slowapi>=0.1.9",
    "ddtrace>=2.0.0",
    "python-json-logger>=2.0.0",
    "boto3>=1.43.36",
    "arq>=0.28.0",
    "redis>=5.3.1",
    "fpdf2>=2.8.7",
    "pyotp>=2.10.0",
]

[dependency-groups]
dev = [
    "pytest>=7.4.3",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=6.0.0",
    "mypy>=1.8.0",
    "ruff>=0.6.0",
    "pre-commit>=3.6.2",
    "coverage>=7.4.3",
    "fakeredis>=2.36.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.mypy]
strict = true
exclude = ["venv", ".venv", "alembic"]

[tool.ruff]
target-version = "py310"
exclude = ["alembic"]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG001", # unused arguments in functions
    "T201",   # print statements are not allowed
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "W191",  # indentation contains tabs
    "B904",  # Allow raising exceptions without from e, for HTTPException
]

# Allow print statements in scripts directory
[tool.ruff.lint.per-file-ignores]
"scripts/*.py" = ["T201", "F401"]  # Allow print statements and unused imports in scripts

[tool.ruff.lint.pyupgrade]
# Preserve types, even if a file imports `from __future__ import annotations`.
keep-runtime-typing = true

[tool.coverage.run]
source = ["src"]
dynamic_context = "test_function"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
norecursedirs = ["scripts", ".git", ".tox", "dist", "build"]
asyncio_mode = "auto"

[tool.coverage.report]
show_missing = true
sort = "-Cover"

[tool.coverage.html]
show_contexts = true
