[project]
name = "fast-back"
version = "0.1.0"
description = ""
requires-python = ">=3.11,<4.0"
dependencies = [
    # Hold the FastAPI/Starlette HTTP layer at the current line: jumping FastAPI to
    # 0.139 (and Starlette to 0.52+/1.0) makes our test suite error out and hang.
    # This framework upgrade is its own dedicated batch, not a routine bump.
    "fastapi[standard]>=0.114.2,<0.116.0",
    "starlette<0.47.0",
    "pydantic>=2.7,<3.0.0",
    "pydantic-settings>=2.4,<3.0.0",
    "resend>=2.0.0,<3.0.0",
    "jinja2>=3.1.4,<4.0.0",
    "alembic>=1.13.0,<2.0.0",
    "httpx>=0.27,<1.0.0",
    "psycopg[binary]>=3.1.13,<4.0.0",
    "asyncpg>=0.29.0,<1.0.0",
    "sqlmodel>=0.0.21,<1.0.0",
    "bcrypt>=4.2.0,<5.0.0",
    "sentry-sdk[fastapi]>=2.64.0,<3.0.0",
    "pyjwt>=2.9,<3.0.0",
    "scalar-fastapi>=1.4.4",
    "slowapi>=0.1.9",
    "ddtrace>=2.0.0",
    "python-json-logger>=2.0.0",
    "boto3>=1.43.42",
    "arq>=0.28.0",
    "redis>=5.3.1",
    "fpdf2>=2.8.7",
    "pyotp>=2.10.0",
    "shapely>=2.1.2",
    "feedparser>=6.0.12",
    "signxml>=5.0.1",
    "defusedxml>=0.7.1",
]

[dependency-groups]
dev = [
    "pytest>=7.4.3",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=6.0.0",
    "mypy>=1.8.0",
    "ruff>=0.6.0",
    "pre-commit>=3.6.2",
    "coverage>=7.4.3",
    "fakeredis>=2.36.2",
    "types-defusedxml>=0.7.0.20260504",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.mypy]
strict = true
python_version = "3.11"
exclude = ["venv", ".venv", "alembic"]

[tool.ruff]
target-version = "py311"
exclude = ["alembic"]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG001", # unused arguments in functions
    "T201",   # print statements are not allowed
    "ASYNC",  # flake8-async: blocking calls inside async def
    "S",      # flake8-bandit: common security anti-patterns
]
ignore = [
    "E501",  # line too long, handled by the formatter
    "B008",  # do not perform function calls in argument defaults
    "W191",  # indentation contains tabs
    "B904",  # Allow raising exceptions without from e, for HTTPException
    "S101",  # assert is used deliberately in a few guarded application spots
    "S104",  # binding 0.0.0.0 is intentional inside containers
    "S105",  # only false-positives here: token-type/error-message label constants
    "S311",  # non-crypto random is fine; crypto paths use `secrets`
    "UP042", # deliberately keep `str, Enum` over 3.11's `StrEnum` — different str() semantics (see CLAUDE.md → Enums)
]

[tool.ruff.lint.per-file-ignores]
# Scripts: dev/ops tooling — print output, re-exports, and a guarded
# rollback swallow are expected.
"scripts/*.py" = ["T201", "F401", "S110"]
# Tests: hardcoded test secrets/URLs are expected.
"tests/*.py" = ["S105", "S106", "S107", "S108"]

[tool.ruff.lint.pyupgrade]
# Preserve types, even if a file imports `from __future__ import annotations`.
keep-runtime-typing = true

[tool.coverage.run]
source = ["src"]
dynamic_context = "test_function"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
norecursedirs = ["scripts", ".git", ".tox", "dist", "build"]
asyncio_mode = "auto"

[tool.coverage.report]
show_missing = true
sort = "-Cover"

[tool.coverage.html]
show_contexts = true
